panibago na to paul

--- a/index.html
+++ b/index.html
@@ -1,64 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample Form</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
-
-        h1 {
-            text-align: center;
-            color: #333;
-        }
-
-        form {
-            max-width: 400px;
-            margin: 0 auto;
-            background: #fff;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        label {
-            display: block;
-            margin-bottom: 8px;
-            font-weight: bold;
-        }
-
-        input[type="text"],
-        input[type="email"],
-        textarea {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 15px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        textarea {
-            height: 100px;
-        }
-
-        input[type="submit"] {
-            background-color: #333;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        input[type="submit"]:hover {
-            background-color: #555;
-        }
-    </style>
+    <!-- Existing code for meta tags, title, and styles -->
 </head>
 <body>
     <h1>Contact Us</h1>
@@ -74,5 +17,19 @@
 
         <input type="submit" value="Submit">
     </form>
+
+    <!-- New HTML code for the "Thank You" message -->
+    <div id="thank-you" style="display: none; text-align: center;">
+        <h2>Thank You!</h2>
+        <p>Your message has been successfully submitted.</p>
+    </div>
+
+    <!-- JavaScript to show the "Thank You" message after form submission -->
+    <script>
+        document.querySelector("form").addEventListener("submit", function(event) {
+            event.preventDefault(); // Prevent the form from actually submitting
+            document.getElementById("thank-you").style.display = "block"; // Show the "Thank You" message
+        });
+    </script>
 </body>
 </html>
